# nxdk-sdl3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config_sdl.make
.github/workflows/: build.yml
example/: CMakeLists.txt  Makefile  main.c
example/cmake/: Postbuild.cmake
nxdk_glue/: SDL_build_config.h  helper.c  stubs.c
nxdk_glue/audio/: SDL_xboxaudio.c  SDL_xboxaudio.h
nxdk_glue/filesystem/: SDL_sysfilesystem.c  SDL_sysfsops.c
nxdk_glue/io/: SDL_iostream.c
nxdk_glue/joystick/: SDL_xboxjoystick.c  SDL_xboxjoystick.h
nxdk_glue/render/: SDL_render_xgu.c  swizzle.c
nxdk_glue/thread/: SDL_systhread.c
nxdk_glue/time/: SDL_systime.c
nxdk_glue/timer/: SDL_systimer.c
nxdk_glue/video/: SDL_xboxvideo.c  SDL_xboxvideo.h
